--- a/ui-android/samples/android_sample/app/src/main/res/layout/activity_main.xml
+++ b/ui-android/samples/android_sample/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,17 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="112dp"
         android:layout_marginTop="340dp"
-        android:text="Launch Trinsic Testbed"
+        android:text="Launch Trinsic Session"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_launch_mdl"
+        android:layout_width="196dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginTop="408dp"
+        android:text="Launch mDL Exchange"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
